--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-intro",
+  "name": "shop-zpw",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "firebase": "^5.7.0",
     "ngx-pagination": "^3.2.1",
     "rxjs": "~6.3.3",
+    "socket.io": "^2.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
